Added accounts of Github, Docker and other datasources
Integrated adding Github and Docker new accounts

Displaying the existing datasources in a table with filters and pagination

--- a/src/app/application-onboarding/application-onboarding.component.html
+++ b/src/app/application-onboarding/application-onboarding.component.html
@@ -7,7 +7,7 @@
                         <li class="nav-item" routerLink="/setup/applications" routerLinkActive="active">
                             <a class="nav-link">Applications</a>
                         </li>
-                        <li class="nav-item disabledMenu">
+                        <li class="nav-item" routerLink="datasource" routerLinkActive="active">
                             <a class="nav-link">Data Sources</a>
                         </li>
                         <li class="nav-item disabledMenu">
@@ -32,156 +32,4 @@
 </div>
 <!-- /.main_content -->
 
-  <!-- Modal -->
-  <div class="modal bd-example-modal-lg fade" id="dataSource" tabindex="-1" role="dialog" aria-labelledby="dataSourceLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title">New Data Source</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <i class="fa fa-times"></i>
-          </button>
-        </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group text-muted">
-              <label>Select Monitoring Provider</label>
-              <div class="box-icon-group">
-                <div class="box-icon">
-                  <input id="new_relic" type="radio" name="apm-provider" />
-                  <label for="new_relic">
-                    <span class="bi-lbl">
-                      <img src="../../assets/images/new_relic.png" alt="icon" />
-                    </span>
-                    <span class="bi-text">
-                      New Relic
-                    </span>
-                  </label>
-                </div>
-                <!-- /.box-icon -->
-                <div class="box-icon">
-                  <input id="prometheus" type="radio" name="apm-provider" />
-                  <label for="prometheus">
-                    <span class="bi-lbl">
-                      <img src="../../assets/images/promethics.png" alt="icon" />
-                    </span>
-                    <span class="bi-text">
-                      Prometheus
-                    </span>
-                  </label>
-                </div>
-                <!-- /.box-icon -->
-                <div class="box-icon">
-                  <input id="dynatrace" type="radio" name="apm-provider" />
-                  <label for="dynatrace">
-                    <span class="bi-lbl">
-                      <img src="../../assets/images/dyna-trace.png" alt="icon" />
-                    </span>
-                    <span class="bi-text">
-                      DynaTrace
-                    </span>
-                  </label>
-                </div>
-                <!-- /.box-icon -->
-                <div class="box-icon">
-                  <input id="gcp-stackdriver" type="radio" name="apm-provider" />
-                  <label for="gcp-stackdriver">
-                    <span class="bi-lbl">
-                      <img src="../../assets/images/gcp-icon.png" alt="icon" />
-                    </span>
-                    <span class="bi-text">
-                      GCP Stackdriver
-                    </span>
-                  </label>
-                </div>
-                <!-- /.box-icon -->
-                <div class="box-icon">
-                  <input id="datadog" type="radio" name="apm-provider" />
-                  <label for="datadog">
-                    <span class="bi-lbl">
-                      <img src="../../assets/images/data-dog.png" alt="icon" />
-                    </span>
-                    <span class="bi-text">
-                      Datadog
-                    </span>
-                  </label>
-                </div>
-                <!-- /.box-icon -->
-                <div class="box-icon">
-                  <input id="app-dynamics" type="radio" name="apm-provider" />
-                  <label for="app-dynamics">
-                    <span class="bi-lbl">
-                      <img src="../../assets/images/app-dynamics.png" alt="icon" />
-                    </span>
-                    <span class="bi-text">
-                      App Dynamics
-                    </span>
-                  </label>
-                </div>
-                <!-- /.box-icon -->
-                <div class="box-icon">
-                  <input id="aws-cloudwatch" type="radio" name="apm-provider" />
-                  <label for="aws-cloudwatch">
-                    <span class="bi-lbl">
-                      <img src="../../assets/images/aws-cloudwatch.png" alt="icon" />
-                    </span>
-                    <span class="bi-text">
-                      AWS CloudWatch
-                    </span>
-                  </label>
-                </div>
-                <!-- /.box-icon -->
-                <div class="box-icon">
-                  <input id="elastic-search" type="radio" name="apm-provider" />
-                  <label for="elastic-search">
-                    <span class="bi-lbl">
-                      <img src="../../assets/images/elastic-search.png" alt="icon" />
-                    </span>
-                    <span class="bi-text">
-                      Elastic Search
-                    </span>
-                  </label>
-                </div>
-                <!-- /.box-icon -->
-                <div class="box-icon">
-                    <input id="prometheus" type="radio" name="apm-provider" />
-                    <label for="prometheus">
-                      <span class="bi-lbl">
-                        <img src="../../assets/images/gith.png" alt="icon" />
-                      </span>
-                      <span class="bi-text">
-                        Git
-                      </span>
-                    </label>
-                  </div>
-                  <!-- /.box-icon -->
-              </div>
-              <!-- /.box-icon-group -->
-            </div>
-            <!-- /.form-group -->
-            <hr />
-            <div class="form-group text-muted">
-              <label>Account Name</label>
-              <input type="text" class="form-control col-6" />
-            </div>
-            <!-- /.form-group -->
-            <div class="form-group text-muted">
-              <label>API key</label>
-              <input type="text" class="form-control col-6" />
-            </div>
-            <!-- /.form-group -->
-            <div class="form-group text-muted">
-              <label>Application Key</label>
-              <input type="text" class="form-control col-6" />
-            </div>
-            <!-- /.form-group -->   
-          </form>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-default" data-dismiss="modal" aria-label="Close">Cancel</button>
-          <button type="submit" class="btn btn-primary">Save</button>
-        </div>
-        <!-- /.modal-footer -->
-      </div>
-    </div>
-  </div>
+  
