--- a/src/app/application-onboarding/data-source/data-source.component.html
+++ b/src/app/application-onboarding/data-source/data-source.component.html
@@ -4,7 +4,7 @@
         <div class="col-sm-12 d-flex flex-column">
           <div class="h-100 d-flex flex-column">
             <div class="tab-content h-100 p-3 flex-grow-1">
-                <div class="tab-pane d-flex flex-column bg-white h-100 fade show active">
+                <div *ngIf="tableIsEmpty" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
                   <div class="page_access text-right p-3">
                     <button class="btn btn-default" data-toggle="modal" data-target="#dataSource" data-backdrop="static" data-keyboard="false">New Data Source</button>
                   </div>
@@ -20,9 +20,144 @@
                     <!-- /.no_content -->
                   </div>
                 </div>
+                <div *ngIf="!tableIsEmpty" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
+                  <div class="page_access d-flex text-right p-3">
+                      <div class="mr-auto">
+                          <div class="input-group input-group_search">
+                            <div class="input-group-prepend">
+                              <span class="input-group-text" id="modal-search"><i class="fa fa-search"></i></span>
+                            </div>
+                            <input type="text" class="form-control" [(ngModel)]="searchData" (keyup)="onSearch()" />
+                            <i (click)="refreshList()" data-toggle="tooltip" data-placement="top" title="Refresh List" class="refresh-icon fa refreshList">&#xf021;</i>
+                          </div>
+                        </div>
+                        <button class="btn btn-default" data-toggle="modal" data-target="#dataSource" data-backdrop="static" data-keyboard="false">New Data Source</button>
+                      </div>
+                  <!-- /.page_access ml-auto -->
+                  <div class="table-content">
+                    <table class="table table-sticky table-striped mb-0">
+                      <thead>
+                        <tr>
+                          <th class="font-weight-bold">Account Name</th>
+                          <th class="font-weight-bold">End Point</th>
+                          <th class="font-weight-bold">Account Type</th>
+                          <th class="font-weight-bold">User name</th>
+                          <th class="font-weight-bold">Action</th>
+                          <!-- <th class="font-weight-bold">ACTION</th> -->
+                        </tr>
+                      </thead>
+                      <tbody>
+                          <tr *ngFor="let datasourceData of currentPage | filter:searchData; let i=index">
+                            <td>{{datasourceData.name}}</td>
+                            <td>{{datasourceData.endPoint}}</td>
+                            <td>{{datasourceData.accountType}}</td>
+                            <td>{{datasourceData.username}}</td>
+                            <!-- <td *ngIf="datasourceData.permissions.READ == undefined"> </td>
+                            <td *ngIf="datasourceData.permissions.WRITE == undefined"> </td>
+                            <td *ngIf="datasourceData.permissions.EXECUTE == undefined"> </td>
+                            <td *ngIf="datasourceData.permissions.READ != undefined">{{datasourceData.permissions.READ.toString()}}</td>
+                            <td *ngIf="datasourceData.permissions.WRITE != undefined">{{datasourceData.permissions.WRITE.toString()}}</td>
+                            <td *ngIf="datasourceData.permissions.EXECUTE != undefined">{{datasourceData.permissions.EXECUTE.toString()}}</td> -->
+                             <td>
+                              <!-- <a    class="text-muted ml-2" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fas fa-pencil-alt"></i></a> -->
+                              <a  class="text-muted ml-2" data-toggle="tooltip"  data-placement="top" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                            </td> 
+                          </tr>
+                      </tbody>
+                    </table>
+                    <div class="table-footer gray-strip px-3 py-2">
+                      <div class="form-inline">
+                        <span class="mr-2">Per page</span>
+                        <select class="form-control" [(ngModel)]="perPageData" (change)="onChangePerPageData()">
+                          <option value="10">10</option>
+                          <option value="15">15</option>
+                          <option value="20">20</option>
+                          <option value="25">25</option>
+    
+                        </select>
+                        <span class="ml-3 mr-2">Showing {{page.startingPoint+1}} to
+                          {{page.endPoint < datasourceListLength-1?page.endPoint:datasourceListLength}} of {{datasourceListLength}}</span>
+                        <!-- <input type="text" class="form-control mr-2" />
+                        <button class="btn btn-primary">Go</button> -->
+    
+                        <ul class="pagination ml-auto mb-0">
+                          <li class="page-item" (click)="pagePrev()"><a class="page-link">Previous</a></li>
+                          <li class="page-item {{page.currentPage === page.pageNo ? 'active' : ''}}"
+                            (click)=showPage(page.currentPage)><a class="page-link">{{page.currentPage}}</a></li>
+                          <li class="page-item {{page.currentPage+1 === page.pageNo ? 'active' : ''}}"
+                            *ngIf="(page.pageNo*page.pageSize) < datasourceListLength || 
+                                      page.currentPage+1 == page.pageNo || page.currentPage+1 == page.pageNo-1 ? true : false" (click)=showPage(page.currentPage+1)>
+                            <a class="page-link">{{page.currentPage+1}}</a>
+                          </li>
+                          <li class="page-item {{page.currentPage+2 === page.pageNo ? 'active' : ''}}"
+                            *ngIf="((page.pageNo+1)*page.pageSize) < datasourceListLength || 
+                                       page.currentPage+2 == page.pageNo ||
+                                       ((page.currentPage+2)*page.pageSize< datasourceListLength? true : ((page.currentPage+2)*page.pageSize)-datasourceListLength < page.pageSize? true : false) ? true : false"
+                            (click)=showPage(page.currentPage+2)><a class="page-link">{{page.currentPage+2}}</a>
+                          </li>
+                          <li class="page-item" (click)="pageNext()"><a class="page-link">Next</a></li>
+                        </ul>
+                      </div>
+                      <!-- /.per_page -->
+                    </div>
+                    <!-- /.table-footer px-3 py-2 -->
+                  </div>
+                  <!-- /.table-content -->
+                </div>
               </div>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <!-- Modal -->
+  <div class="modal bd-example-modal-lg fade" id="dataSource" tabindex="-1" role="dialog" aria-labelledby="dataSourceLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">New Data Source</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <i class="fa fa-times"></i>
+          </button>
+        </div>
+        <div class="modal-body">
+          <!-- <form> -->
+            <div class="form-group text-muted">
+              <label>Select Monitoring Provider DD</label>
+              <div class="box-icon-group">
+                <div class="box-icon" *ngFor="let d of dataSourceList;let i=index;" (click)="getDataProvider(d.name)">
+                  <input id="{{d.id}}" type="radio" name="apm-provider" />
+                  <label for="{{d.id}}">
+                    <span class="bi-lbl">
+                      <img src="{{d.path}}" alt="icon" />
+                    </span>
+                    <span class="bi-text">
+                     {{d.name}}
+                    </span>
+                  </label>
+                </div>
+                <!-- /.box-icon -->
+              
+              </div>
+              <!-- /.box-icon-group -->
+            </div>
+            <!-- /.form-group -->
+            <hr />
+           <!-- code for form load   -->
+           <div *ngIf="selectedDataProvider === 'Github'"><app-github-form></app-github-form></div>
+           <div *ngIf="selectedDataProvider === 'New Relic'"><app-newrelic-form></app-newrelic-form></div>
+           <div *ngIf="selectedDataProvider === 'Dynatrace'"><app-dynatrace-form></app-dynatrace-form></div>
+           <div *ngIf="selectedDataProvider === 'GCP Stackdriver'"><app-gcp-stackdriver-form></app-gcp-stackdriver-form></div>
+           <div *ngIf="selectedDataProvider === 'Prometheus'"><app-prometheus-form></app-prometheus-form></div>
+           <div *ngIf="selectedDataProvider === 'Elastic Search'"><app-elasticsearch-form></app-elasticsearch-form></div>
+           <div *ngIf="selectedDataProvider === 'AWS Cloudwatch'"><app-aws-cloudwatch-form></app-aws-cloudwatch-form></div>
+           <div *ngIf="selectedDataProvider === 'App Dynamics'"><app-app-dynamics-form></app-app-dynamics-form></div> 
+           <div *ngIf="selectedDataProvider === 'Datadog'"><app-datadog-form></app-datadog-form></div>
+           <div *ngIf="selectedDataProvider === 'Docker'"><app-docker-form></app-docker-form></div>
+           <!-- </form> -->
+        </div>
+       
+        <!-- /.modal-footer -->
       </div>
     </div>
   </div>
