--- a/src/app/application-onboarding/application/application.component.less
+++ b/src/app/application-onboarding/application/application.component.less
@@ -194,3 +194,6 @@ input.ng-invalid.ng-touched , select.ng-invalid.ng-touched{
 .table-head{
 	color: #999;
 }
+.dots-container{
+	position: relative !important;
+}
