--- a/src/app/application-onboarding/application/application.component.html
+++ b/src/app/application-onboarding/application/application.component.html
@@ -393,12 +393,6 @@
     <!-- /.setup-content -->
   </div>
   <div *ngIf = "apploading" class="tab-pane d-flex flex-column bg-white h-100 fade show active">
-    <div class="dots-container">
-      <div class="dots"></div>
-      <div class="dots"></div>
-      <div class="dots"></div>
-      <div class="dots"></div>
-      <div class="dots"></div>
-    </div>
+    <app-loading-screen></app-loading-screen>
   </div>
 </div>
