resolved minor bugs

--- a/src/app/application-onboarding/data-source/data-source.component.html
+++ b/src/app/application-onboarding/data-source/data-source.component.html
@@ -13,7 +13,7 @@
                   <!-- /.gray-strip -->
                   <div class="d-flex w-100 h-100">
                     <div class="no_content m-auto">
-                      <img src="images/blank-123.png" class="hr-image" alt="blank" />
+                      <img src="../../../assets//images/blank-123.png" class="hr-image" alt="blank" />
                       <p><strong>Create New Data Source</strong></p>
                       <p>Use application for continuous verification and production monitoring <br><small>(To create application, add at least 1 Cloud service and 1 Data source)</small></p>
                     </div>
