--- a/src/app/application-onboarding/data-source/data-source.component.less
+++ b/src/app/application-onboarding/data-source/data-source.component.less
@@ -66,3 +66,10 @@ tbody{
 	filter: grayscale(0);
 	opacity: 1;
 }
+.disabledMenu{
+	opacity: 0.3;
+	pointer-events: none;
+}
+// pointer-events: none;
+//     opacity: .5;
+// }
