--- a/src/app/application-onboarding/data-source/docker-form/docker-form.component.html
+++ b/src/app/application-onboarding/data-source/docker-form/docker-form.component.html
@@ -4,7 +4,9 @@
             <label>Account Name</label>
             <input type="text" formControlName="name" class="form-control" [ngClass]="{ 'is-invalid': submitted && df.name.errors }" />
             <div *ngIf="submitted && df.name.errors" class="invalid-feedback">
-                <div *ngIf="df.name.errors.required">name is required</div>
+                <div *ngIf="df.name.errors.required">Account name is required</div>
+                <div *ngIf="df.name.errors.accountExist">Account already
+                    exists with same name. Please choose a unique account name</div>
             </div>
         </div>
     </div>   
